Changed the dq yaml files

--- a/oneclick/demo-gov/resources/marsbank-datagovernance-process/transactions-consumer-configs/dq_cc_analytics_data_product.yaml
+++ b/oneclick/demo-gov/resources/marsbank-datagovernance-process/transactions-consumer-configs/dq_cc_analytics_data_product.yaml
@@ -1,6 +1,6 @@
 metadata_registry_defaults:
  dataplex:
-   projects: marsbank-datagovernance
+   projects: _project_datagov_
    locations: us-central1
    lakes: prod-transactions-consumer-domain
    zones: data-product-zone
