--- a/oneclick/demo-gov/resources/marsbank-datagovernance-process/merchant-source-configs/dq_merchant_data_product.yaml
+++ b/oneclick/demo-gov/resources/marsbank-datagovernance-process/merchant-source-configs/dq_merchant_data_product.yaml
@@ -1,6 +1,6 @@
 metadata_registry_defaults:
  dataplex:
-   projects: marsbank-datagovernance
+   projects: _project_datagov_
    locations: us-central1
    lakes: prod-merchant-source-domain
    zones: merchant-data-product-zone
