--- a/oneclick/demo-gov/resources/marsbank-datagovernance-process/customer-source-configs/dq_customer_data_product.yaml
+++ b/oneclick/demo-gov/resources/marsbank-datagovernance-process/customer-source-configs/dq_customer_data_product.yaml
@@ -1,6 +1,6 @@
 metadata_registry_defaults:
  dataplex:
-   projects: marsbank-datagovernance
+   projects: _project_datagov_
    locations: us-central1
    lakes: prod-customer-source-domain
    zones: customer-data-product-zone
