Changed the date partition from date to dt for merchants and transactions

--- a/oneclick/demo-gov/resources/marsbank-datagovernance-process/merchant-source-configs/dq_merchant_gcs_data.yaml
+++ b/oneclick/demo-gov/resources/marsbank-datagovernance-process/merchant-source-configs/dq_merchant_gcs_data.yaml
@@ -149,7 +149,7 @@ rule_bindings:
     row_filter_id: NONE
     rule_ids:
       - NO_DELAYED_INGESTION_DAY_LEVEL:
-          ingestion_date_day: date
+          ingestion_date_day: dt
           elapsed_time_days: 1
 
  VALID_EMAIL:
