--- a/oneclick/demo-gov/resources/marsbank-datagovernance-process/merchant-source-configs/dq_merchant_gcs_data.yaml
+++ b/oneclick/demo-gov/resources/marsbank-datagovernance-process/merchant-source-configs/dq_merchant_gcs_data.yaml
@@ -190,6 +190,6 @@ rule_bindings:
     rule_ids:
       - NO_REFERENTIAL_INTEGRITY_VIOLATION_IN_OPERATOR:
           ref_data_project: _project_datasto_
-          ref_data_dataset: prod_merchants_ref_data
+          ref_data_dataset: merchants_ref_data
           ref_data_table_id: mcc_codes
           ref_data_column_id: mcc
