--- a/oneclick/demo-gov/resources/marsbank-datagovernance-process/merchant-source-configs/dq_merchant_gcs_data.yaml
+++ b/oneclick/demo-gov/resources/marsbank-datagovernance-process/merchant-source-configs/dq_merchant_gcs_data.yaml
@@ -1,6 +1,6 @@
 metadata_registry_defaults:
  dataplex:
-   projects: _project_datagov_
+   projects: mbdatagov-763108871
    locations: us-central1
    lakes: prod-merchant-source-domain
    zones: merchant-raw-zone
@@ -189,7 +189,7 @@ rule_bindings:
     row_filter_id: NONE
     rule_ids:
       - NO_REFERENTIAL_INTEGRITY_VIOLATION_IN_OPERATOR:
-          ref_data_project: _project_datasto_
+          ref_data_project: mbdatasto-763108871
           ref_data_dataset: merchants_ref_data
           ref_data_table_id: mcc_code
           ref_data_column_id: mcc
